--- a/platforms/windows/projects/minecraftcpp.vcxproj.filters
+++ b/platforms/windows/projects/minecraftcpp.vcxproj.filters
@@ -1178,6 +1178,9 @@
     <ClInclude Include="..\..\..\source\common\Logger.hpp">
       <Filter>source\common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\source\common\StandardOut.hpp">
+      <Filter>source\common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\thirdparty\raknet\TwoWayAuthentication.cpp">
@@ -2206,10 +2209,10 @@
     <ClCompile Include="$(MC_ROOT)\platforms\windows\SoundSystemWindows.cpp">
       <Filter>source\platforms\windows</Filter>
     </ClCompile>
-    <ClCompile Include="..\LoggerWindows.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\LoggerWindows.cpp">
       <Filter>source\platforms\windows</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\common\Logger.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\common\Logger.cpp">
       <Filter>source\common</Filter>
     </ClCompile>
   </ItemGroup>
