StandardOut_windows * Replaced the Windows #ifdefs in StandardOut with StandardOut_windows

--- a/platforms/windows/projects/minecraftcpp.vcxproj
+++ b/platforms/windows/projects/minecraftcpp.vcxproj
@@ -381,9 +381,9 @@
     <ClInclude Include="$(MC_ROOT)\thirdparty\zlib\zconf.h" />
     <ClInclude Include="$(MC_ROOT)\thirdparty\zlib\zlib.h" />
     <ClInclude Include="$(MC_ROOT)\thirdparty\zlib\zutil.h" />
-    <ClInclude Include="..\..\..\compat\KeyCodes.hpp" />
-    <ClInclude Include="..\..\..\compat\SDLKeyCodes.h" />
-    <ClInclude Include="..\..\..\source\common\StandardOut.hpp" />
+    <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp" />
+    <ClInclude Include="$(MC_ROOT)\compat\SDLKeyCodes.h" />
+    <ClInclude Include="$(MC_ROOT)\source\common\StandardOut.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\compat\GLExt.cpp" />
@@ -391,6 +391,7 @@
     <ClCompile Include="$(MC_ROOT)\platforms\windows\AppPlatform_windows.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\main.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\SoundSystemWindows.cpp" />
+    <ClInclude Include="$(MC_ROOT)\platforms\windows\StandardOut_windows.hpp" />
     <ClCompile Include="$(MC_ROOT)\source\App.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\AppPlatform.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\AvailableGamesList.cpp" />
@@ -729,6 +730,7 @@
     <ClCompile Include="$(MC_ROOT)\thirdparty\zlib\uncompr.c" />
     <ClCompile Include="$(MC_ROOT)\thirdparty\zlib\zutil.c" />
     <ClCompile Include="..\..\..\source\common\StandardOut.cpp" />
+    <ClCompile Include="..\StandardOut_windows.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="$(MC_ROOT)\thirdparty\raknet\CMakeLists.txt" />
